Fix du W3C checker des labels

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -58,8 +58,8 @@
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Tartare de poulpe acidulé</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Aux zestes d'orange</p>
-                            <p class="restaurant__dishdetail--bold">25€</p>
+                            <span class="restaurant__dishdetail--light">Aux zestes d'orange</span>
+                            <span class="restaurant__dishdetail--bold">25€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -71,8 +71,8 @@
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Velouté de légumes d'antan</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Carotte, panais, topinambour</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Carotte, panais, topinambour</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -84,8 +84,8 @@
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Soupe à l'oignon</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Revisitée</p>
-                            <p class="restaurant__dishdetail--bold">20€</p>
+                            <span class="restaurant__dishdetail--light">Revisitée</span>
+                            <span class="restaurant__dishdetail--bold">20€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -100,8 +100,8 @@
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Coquilles Saint-Jacques</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Accompagnées d'une purée de panais</p>
-                            <p class="restaurant__dishdetail--bold">40€</p>
+                            <span class="restaurant__dishdetail--light">Accompagnées d'une purée de panais</span>
+                            <span class="restaurant__dishdetail--bold">40€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -113,8 +113,8 @@
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Magret de canard</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et parmentier de pommes de terre</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Et parmentier de pommes de terre</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -126,8 +126,8 @@
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Pigeonneau d’Ille-et-Vilaine</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Sur son lit de gnocchis aux légumes</p>
-                            <p class="restaurant__dishdetail--bold">44€</p>
+                            <span class="restaurant__dishdetail--light">Sur son lit de gnocchis aux légumes</span>
+                            <span class="restaurant__dishdetail--bold">44€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -142,8 +142,8 @@
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Pétales de violettes glacés</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et purée de noisettes</p>
-                            <p class="restaurant__dishdetail--bold">18€</p>
+                            <span class="restaurant__dishdetail--light">Et purée de noisettes</span>
+                            <span class="restaurant__dishdetail--bold">18€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -155,8 +155,8 @@
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Fondant au chocolat</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Revisité</p>
-                            <p class="restaurant__dishdetail--bold">22€</p>
+                            <span class="restaurant__dishdetail--light">Revisité</span>
+                            <span class="restaurant__dishdetail--bold">22€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -168,8 +168,8 @@
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Millefeuille croustillant</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Myrtilles et pâte d’amande</p>
-                            <p class="restaurant__dishdetail--bold">23€</p>
+                            <span class="restaurant__dishdetail--light">Myrtilles et pâte d’amande</span>
+                            <span class="restaurant__dishdetail--bold">23€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
