--- a/restaurants/delice_des_sens.html
+++ b/restaurants/delice_des_sens.html
@@ -58,8 +58,8 @@
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Tartare de thon</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Assaisonné au yuzu</p>
-                            <p class="restaurant__dishdetail--bold">25€</p>
+                            <span class="restaurant__dishdetail--light">Assaisonné au yuzu</span>
+                            <span class="restaurant__dishdetail--bold">25€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -71,8 +71,8 @@
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Bouchée de homard croustillant</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et sa farandole de petits légumes</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Et sa farandole de petits légumes</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -84,8 +84,8 @@
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Velouté de cèpes</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Aux truffes</p>
-                            <p class="restaurant__dishdetail--bold">20€</p>
+                            <span class="restaurant__dishdetail--light">Aux truffes</span>
+                            <span class="restaurant__dishdetail--bold">20€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -100,8 +100,8 @@
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Poulet rôti aux herbes de Provence</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et sa crème de truffe</p>
-                            <p class="restaurant__dishdetail--bold">40€</p>
+                            <span class="restaurant__dishdetail--light">Et sa crème de truffe</span>
+                            <span class="restaurant__dishdetail--bold">40€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -113,8 +113,8 @@
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Langouste rôtie</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et ses légumes de saison</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Et ses légumes de saison</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -126,8 +126,8 @@
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Côte de bœuf Angus</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et sa purée de panais</p>
-                            <p class="restaurant__dishdetail--bold">44€</p>
+                            <span class="restaurant__dishdetail--light">Et sa purée de panais</span>
+                            <span class="restaurant__dishdetail--bold">44€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -142,8 +142,8 @@
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Farandole de desserts</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Du chef</p>
-                            <p class="restaurant__dishdetail--bold">18€</p>
+                            <span class="restaurant__dishdetail--light">Du chef</span>
+                            <span class="restaurant__dishdetail--bold">18€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -155,8 +155,8 @@
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Crème brulée</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Revisitée</p>
-                            <p class="restaurant__dishdetail--bold">22€</p>
+                            <span class="restaurant__dishdetail--light">Revisitée</span>
+                            <span class="restaurant__dishdetail--bold">22€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -168,8 +168,8 @@
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Tiramisu</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">À la noisette</p>
-                            <p class="restaurant__dishdetail--bold">23€</p>
+                            <span class="restaurant__dishdetail--light">À la noisette</span>
+                            <span class="restaurant__dishdetail--bold">23€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
