--- a/restaurants/note_enchantee.html
+++ b/restaurants/note_enchantee.html
@@ -58,8 +58,8 @@
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Ravioles de foie gras</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Accompagnées de leur crème à la truffe</p>
-                            <p class="restaurant__dishdetail--bold">25€</p>
+                            <span class="restaurant__dishdetail--light">Accompagnées de leur crème à la truffe</span>
+                            <span class="restaurant__dishdetail--bold">25€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -71,8 +71,8 @@
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Caviar osciètre</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Sur blini à la farine de blé noir</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Sur blini à la farine de blé noir</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -84,8 +84,8 @@
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Homard et espuma de potiron</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Marinés aux zestes d'orange</p>
-                            <p class="restaurant__dishdetail--bold">20€</p>
+                            <span class="restaurant__dishdetail--light">Marinés aux zestes d'orange</span>
+                            <span class="restaurant__dishdetail--bold">20€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -97,8 +97,8 @@
                     <label for="dish-selected-s4" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Foie gras de canard cuit entier</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Confiture de figue et pain toasté</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Confiture de figue et pain toasté</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -113,8 +113,8 @@
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Noix de coquilles Saint-Jacques</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Sur lit de purée de céleri-rave</p>
-                            <p class="restaurant__dishdetail--bold">40€</p>
+                            <span class="restaurant__dishdetail--light">Sur lit de purée de céleri-rave</span>
+                            <span class="restaurant__dishdetail--bold">40€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -126,8 +126,8 @@
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Langoustine poêlée</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Purée de patate douce</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Purée de patate douce</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -139,8 +139,8 @@
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Mijoté de queue de bœuf</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et riz sauvage aux zestes de citron</p>
-                            <p class="restaurant__dishdetail--bold">44€</p>
+                            <span class="restaurant__dishdetail--light">Et riz sauvage aux zestes de citron</span>
+                            <span class="restaurant__dishdetail--bold">44€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -155,8 +155,8 @@
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Macaron noisette et chocolat</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Glace au caramel brun et sel de Guérande</p>
-                            <p class="restaurant__dishdetail--bold">18€</p>
+                            <span class="restaurant__dishdetail--light">Glace au caramel brun et sel de Guérande</span>
+                            <span class="restaurant__dishdetail--bold">18€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -168,8 +168,8 @@
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Baba au rhum revisité</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Avec son coulis de citron</p>
-                            <p class="restaurant__dishdetail--bold">22€</p>
+                            <span class="restaurant__dishdetail--light">Avec son coulis de citron</span>
+                            <span class="restaurant__dishdetail--bold">22€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -181,8 +181,8 @@
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Tarte au citron meringuée</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Déstructurée</p>
-                            <p class="restaurant__dishdetail--bold">23€</p>
+                            <span class="restaurant__dishdetail--light">Déstructurée</span>
+                            <span class="restaurant__dishdetail--bold">23€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
