--- a/restaurants/palette_du_gout.html
+++ b/restaurants/palette_du_gout.html
@@ -58,8 +58,8 @@
                     <label for="dish-selected-s1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Fricassée d'escargots</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Au piment d'Espelette</p>
-                            <p class="restaurant__dishdetail--bold">25€</p>
+                            <span class="restaurant__dishdetail--light">Au piment d'Espelette</span>
+                            <span class="restaurant__dishdetail--bold">25€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -71,8 +71,8 @@
                     <label for="dish-selected-s2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Foie gras de canard mi-cuit</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et ses copeaux de truffe noire</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">Et ses copeaux de truffe noire</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -84,8 +84,8 @@
                     <label for="dish-selected-s3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Oeuf au plat</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Assaisonné à la truffe sur lit de caviar</p>
-                            <p class="restaurant__dishdetail--bold">20€</p>
+                            <span class="restaurant__dishdetail--light">Assaisonné à la truffe sur lit de caviar</span>
+                            <span class="restaurant__dishdetail--bold">20€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -100,8 +100,8 @@
                     <label for="dish-selected-m1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Filet de boeuf aux herbes</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Accompagné de sa ribambelle de légumes</p>
-                            <p class="restaurant__dishdetail--bold">40€</p>
+                            <span class="restaurant__dishdetail--light">Accompagné de sa ribambelle de légumes</span>
+                            <span class="restaurant__dishdetail--bold">40€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -113,8 +113,8 @@
                     <label for="dish-selected-m2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Parmentier de queue de boeuf</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">À la truffe noire sur sa purée de panais</p>
-                            <p class="restaurant__dishdetail--bold">35€</p>
+                            <span class="restaurant__dishdetail--light">À la truffe noire sur sa purée de panais</span>
+                            <span class="restaurant__dishdetail--bold">35€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -126,8 +126,8 @@
                     <label for="dish-selected-m3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Filet de turbo</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Aux agrumes</p>
-                            <p class="restaurant__dishdetail--bold">44€</p>
+                            <span class="restaurant__dishdetail--light">Aux agrumes</span>
+                            <span class="restaurant__dishdetail--bold">44€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -142,8 +142,8 @@
                     <label for="dish-selected-d1" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Paris-Brest</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Revisité</p>
-                            <p class="restaurant__dishdetail--bold">18€</p>
+                            <span class="restaurant__dishdetail--light">Revisité</span>
+                            <span class="restaurant__dishdetail--bold">18€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -155,8 +155,8 @@
                     <label for="dish-selected-d2" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Macaron au chocolat d'exception</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Et glace à la vanille de Madagascar</p>
-                            <p class="restaurant__dishdetail--bold">22€</p>
+                            <span class="restaurant__dishdetail--light">Et glace à la vanille de Madagascar</span>
+                            <span class="restaurant__dishdetail--bold">22€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
@@ -168,8 +168,8 @@
                     <label for="dish-selected-d3" class="restaurant__card--unselected">
                         <span class="restaurant__dish">Mousse au chocolat</span>
                         <span class="restaurant__dishdetail">
-                            <p class="restaurant__dishdetail--light">Au piment d'Espelette et à la truffe noire</p>
-                            <p class="restaurant__dishdetail--bold">23€</p>
+                            <span class="restaurant__dishdetail--light">Au piment d'Espelette et à la truffe noire</span>
+                            <span class="restaurant__dishdetail--bold">23€</span>
                         </span>
                     </label>
                     <div class="restaurant__card--selected">
