--- a/restaurants/note_enchantee.html
+++ b/restaurants/note_enchantee.html
@@ -16,7 +16,7 @@
     <header>
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <div class="header__maintitle">
-            <h1 class="header__title">ohmyfood</h1>
+            <span class="header__title">ohmyfood</span>
         </div>
     </header>
 
