--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OMF - À la française</title>
+    <title>À la française</title>
     <script src="https://kit.fontawesome.com/0a24995ab9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/common_style.css">
     <link rel="stylesheet" href="../assets/mobile_menupage_style.css">
